Bug 455770 - Arranging icons by rows/columns can be ambiguous
Summary: Arranging icons by rows/columns can be ambiguous
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.25.1
Platform: Manjaro Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-06-22 03:48 UTC by Brian
Modified: 2022-06-29 17:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Screen capture of the selected options, and the icorrectly arranged icons. (626.56 KB, image/png)
2022-06-22 03:48 UTC, Brian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2022-06-22 03:48:49 UTC
Created attachment 150033 [details]
Screen capture of the selected options, and the icorrectly arranged icons.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Right Click on desktop > Arrange In > Rows/Columns

OBSERVED RESULT
Icons are placed in the wrong order. If Arrange In rows is chosen, the icons are placed column-wise. 
If arrange in Columns is chosen, the icons are placed row-wise

EXPECTED RESULT
Icons are arranged in the order the label indicates.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  5.18.5-1-MANJARO (64-bit)
(available in About System)
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-06-22 16:16:01 UTC
Your screenshot shows a column of icons and the "arrange in columns" option selected. Looks to me like everything is working properly. Can yo clarify what the problem is, exactly?
Comment 2 Brian 2022-06-22 17:13:50 UTC
(In reply to Nate Graham from comment #1)
> Your screenshot shows a column of icons and the "arrange in columns" option
> selected. Looks to me like everything is working properly. Can yo clarify
> what the problem is, exactly?

The icons in the picture are arranged row-wise. Rows go along the y-axis, columns along the x-axis. My problem is that the labels are backwards.  When "arrange in columns" is selected I would expect to see a line of icons going along the x-axis, instead of the y-axis like it is on the screenshot.
Comment 3 Nate Graham 2022-06-22 17:31:16 UTC
The screenshot depicts a column of icons, not a row of icons. You're defining "row" and "column" to be their opposites.
Comment 4 Janet Blackquill 2022-06-23 02:12:00 UTC
"Columns" and "rows" are kinda meaningless terms when you have a grid of icons without any visual indication how they're being arranged (especially when other software has contradictory meanings on what exactly that would entail), so we should replace the strings with something clearer.
Comment 5 Nate Graham 2022-06-23 03:06:16 UTC
I think that calling a column of icons "arrangement in rows" is odd, but you're right that it could be ambiguous for people with specialized experience with design or development tools. Changing the strings seems fair.
Comment 6 Nate Graham 2022-06-29 17:47:01 UTC
Git commit 1a0150d726adacddbfa588844171c116c6bffc87 by Nate Graham, on behalf of Jan Blackquill.
Committed on 29/06/2022 at 17:32.
Pushed by ngraham into branch 'master'.

folderview: make menu entries less ambiguous

Without clear expectations, 'Columns' and 'Rows' are kinda meaningless to
users, since users from different backgrounds will form different expectations
as to what their behaviour will be, e.g. users that have used design software may
be used to selecting five items and selecting 'Layout > Columns', which would turn
that into five columns of one item each, while users that use different software
(or GUI layouts) would expect that would create one column of five items.

In short: users have contradictory expectations if we use 'Columns' and 'Rows' as the
UI strings here, so let's use something less contradictory.

M  +6    -2    containments/desktop/package/contents/ui/ConfigIcons.qml
M  +6    -3    containments/desktop/plugins/folder/viewpropertiesmenu.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/1a0150d726adacddbfa588844171c116c6bffc87