folderview: make menu entries less ambiguous

Without clear expectations, 'Columns' and 'Rows' are kinda meaningless to
users, since users from different backgrounds will form different expectations
as to what their behaviour will be, e.g. users that have used design software may
be used to selecting five items and selecting 'Layout > Columns', which would turn
that into five columns of one item each, while users that use different software
(or GUI layouts) would expect that would create one column of five items.

In short: users have contradictory expectations if we use 'Columns' and 'Rows' as the
UI strings here, so let's use something less contradictory.

BUG: 455770